<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorBlue"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/BackMain"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/StringValue"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:gravity="center|start"
            android:text="@string/view_repository"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/StringValue"
        android:padding="10dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <TextView
        android:id="@+id/nameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/imgDetail"
        app:layout_constraintTop_toBottomOf="@id/linear"
        tools:text="kunny/" />

    <TextView
        android:id="@+id/repoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/nameDetail"
        app:layout_constraintTop_toBottomOf="@id/linear"
        tools:text="kunny" />


    <ImageView
        android:id="@+id/imgStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/StringValue"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintStart_toEndOf="@id/imgDetail"
        app:layout_constraintTop_toBottomOf="@id/nameDetail" />

    <TextView
        android:id="@+id/numStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/imgStar"
        app:layout_constraintTop_toBottomOf="@id/nameDetail"
        tools:text="81 stars" />

    <TextView
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/imgDetail" />

    <TextView
        android:id="@+id/txtFollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/follower"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/followerNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/txtFollower"
        app:layout_constraintTop_toBottomOf="@id/view1"
        tools:text="232" />

    <TextView
        android:id="@+id/txtFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/following"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/followerNum"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/followingNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/txtFollowing"
        app:layout_constraintTop_toBottomOf="@id/view1"
        tools:text="15" />

    <TextView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/followingNum" />

    <ImageView
        android:id="@+id/imgDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/StringValue"
        android:src="@drawable/ic_description_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <TextView
        android:id="@+id/descriptionName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imgDescription"
        app:layout_constraintTop_toBottomOf="@id/view2"
        tools:text="dddddddd" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/description"
        app:layout_constraintStart_toEndOf="@id/imgDescription"
        app:layout_constraintTop_toBottomOf="@id/descriptionName" />


    <TextView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/imgDescription" />

    <ImageView
        android:id="@+id/imgLanguage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/StringValue"
        android:src="@drawable/ic_language_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" />


    <TextView
        android:id="@+id/languageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/imgLanguage"
        app:layout_constraintTop_toBottomOf="@id/view3"
        tools:text="dddddddd" />

    <TextView
        android:id="@+id/txtLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/language"
        app:layout_constraintStart_toEndOf="@id/imgDescription"
        app:layout_constraintTop_toBottomOf="@id/languageName" />


</androidx.constraintlayout.widget.ConstraintLayout>